# rusty-particle-hub

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: rust.yml
src/: main.rs  models.rs
static/: particlehub.css  particlehub.js
templates/: device_info.html.tera  device_list_row.html.tera  particlehub.html.tera
tests/: tests.rs
