[package]
name = "particlehub"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.7"
reqwest = { version = "0.11.2", features = ["json", "blocking"] }
serde = "1.0.37"
# serde_json = "1.0.47"
serde_derive = "1.0.47"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["tera_templates", "serve"]